feat(pretrianed): download pretrained
